--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "better-sqlite3": "^9.4.3",
     "d3": "^7.9.0",
-    "electron": "^29.3.0",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "simple-git": "^3.22.0"
+    "simple-git": "^3.22.0",
+    "smart-buffer": "^4.2.0"
   },
   "devDependencies": {
     "@electron/rebuild": "^4.0.1",
@@ -46,6 +47,7 @@
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
+    "electron": "^29.3.0",
     "electron-builder": "^24.13.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
