--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BciGit",
   "version": "0.1.0",
-  "description": "BciGit – a cross-platform GitKraken-inspired client built with Electron, React, and TypeScript",
+  "description": "BciGit – a cross-platform client built with Electron, React, and TypeScript",
   "main": "dist/electron/main.js",
   "type": "module",
   "scripts": {
